--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <header>
         <nav>
             <!-- Navigation to the info page -->
-            <a href="info.html" class="info-link">Learn More About Our Chatbot</a>
+            <a href="info.html" class="info-link">Learn More About Unik</a>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <h1>Welcome to Our Chatbot</h1>
-            <p>Interact with our AI-powered assistant to get instant help and information.</p>
+            <h1>Unik</h1>
+            <p>AI Academic Advisor</p>
         </section>
 
         <!-- Chatbot Embedding Area -->
         <section class="chatbot-container">
             <!-- Placeholder for chatbot embedding -->
-            <div id="chatbot">Chatbot will be embedded here.</div>
+            <div id="chatbot">Embed Chatbot Here</div>
         </section>
     </main>
 
