--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,19 @@
     <title>Chatbot Webapp</title>
     <link rel="stylesheet" href="style.css"> <!-- Linking CSS file -->
 </head>
+<main>
+    <section class="hero">
+        <h1>Meet Unik - Your AI Academic Advisor</h1>
+        <p>At the forefront of student support, Unik provides instant, precise answers to your academic queries at MUN. Discover the future of academic advising today.</p>
+        <a href="info.html" class="info-link">Learn More</a> <!-- Fixed navigation button -->
+    </section>
+
+    <!-- Chatbot Embedding Area -->
+    <section class="chatbot-container">
+        <!-- Placeholder for chatbot embedding -->
+        <div id="chatbot">Your personal AI Academic Advisor awaits.</div>
+    </section>
+</main>
 <body>
     <header>
         <nav>
